--- a/src/output.css
+++ b/src/output.css
@@ -872,6 +872,12 @@
   .h-4 {
     height: calc(var(--spacing) * 4);
   }
+  .h-6 {
+    height: calc(var(--spacing) * 6);
+  }
+  .h-7 {
+    height: calc(var(--spacing) * 7);
+  }
   .h-16 {
     height: calc(var(--spacing) * 16);
   }
@@ -910,6 +916,12 @@
   }
   .w-3\/5 {
     width: calc(3/5 * 100%);
+  }
+  .w-6 {
+    width: calc(var(--spacing) * 6);
+  }
+  .w-7 {
+    width: calc(var(--spacing) * 7);
   }
   .w-12 {
     width: calc(var(--spacing) * 12);
@@ -1801,6 +1813,9 @@
   .bg-origin-padding {
     background-origin: padding-box;
   }
+  .fill-current {
+    fill: currentColor;
+  }
   .fill-none {
     fill: none;
   }
@@ -2571,6 +2586,13 @@
   }
   .transform-view {
     transform-box: view-box;
+  }
+  .group-hover\:fill-amber-300 {
+    &:is(:where(.group):hover *) {
+      @media (hover: hover) {
+        fill: var(--color-amber-300);
+      }
+    }
   }
   .hover\:bg-blue-700 {
     &:hover {
