--- a/src/output.css
+++ b/src/output.css
@@ -1662,6 +1662,9 @@
   .border-gray-800 {
     border-color: var(--color-gray-800);
   }
+  .border-gray-900 {
+    border-color: var(--color-gray-900);
+  }
   .border-yellow-400 {
     border-color: var(--color-yellow-400);
   }
